# FModVoiceChange

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_voicechange_MainActivity.h  native-lib.cpp
app/src/main/java/com/example/voicechange/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
